--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -13,15 +13,15 @@ hugoblox:
   # ────────────────────────────────────────────────────────────────────────────
   identity:
     # Site name - shown in navbar, footer, copyright, and browser title by default
-    name: "Saurav Gupta"
+    name: "Home"
     # Legal entity for copyright notices (defaults to name if not set)
-    organization: "Mercedes Benz Research and Development India"
+    organization: "Hugo Blox Builder"
     # Schema.org type for structured data
     type: person                        # person | organization | local_business
     # Short tagline displayed on your site
-    tagline: "Senior Technical Lead"
+    tagline: "Hugo Blox Builder"
     # Site meta description for search engines and social sharing
-    description: ""
+    description: "Hugo Blox Builder"
     # Social accounts (used for meta tags like Twitter Cards)
     social:
       twitter: ""              # Twitter/X handle for Twitter Cards (without @)
