Update author bio to include research interests in LLMs, VLMs, and multimodal AI

--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -11,7 +11,7 @@ status:
   icon: 🚗
 role: Senior Technical Lead – Computer Vision & Deep Learning
 bio: |
-  Senior Technical Lead with 9+ years of experience. I build production-grade AI systems for automotive biometrics, in-cabin perception, and physiological sensing.
+  Senior Technical Lead with 9+ years of experience. I build production-grade AI systems for automotive biometrics, in-cabin perception, and physiological sensing. My research interests include Large Language Models (LLMs), Vision-Language Models (VLMs), and multimodal AI, with a focus on learning and advancing these cutting-edge fields.
 
 affiliations:
   - name: Mercedes-Benz R&D India
